<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/football3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/team_a"
                    android:textColor="#ffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp"
                    android:text="@string/initialValue"
                    android:textColor="#ffff"
                    android:textSize="45sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="touchdownTeamA"
                    android:text="@string/touchdown"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="fieldGoalTeamA"
                    android:paddingBottom="8dp"
                    android:text="@string/field_goal"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="extraTwoTeamA"
                    android:paddingBottom="8dp"
                    android:text="@string/extra_2"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="extraOneTeamA"
                    android:paddingBottom="8dp"
                    android:text="@string/extra_1"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="safetyTeamA"
                    android:paddingBottom="8dp"
                    android:text="@string/safety"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/team_b"
                    android:textColor="#ffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp"
                    android:text="@string/initialValue"
                    android:textColor="#ffff"
                    android:textSize="45sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="touchdownTeamB"
                    android:text="@string/touchdown" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="fieldGoalTeamB"
                    android:paddingBottom="8dp"
                    android:text="@string/field_goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="extraTwoTeamB"
                    android:paddingBottom="8dp"
                    android:text="@string/extra_2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="extraOneTeamB"
                    android:paddingBottom="8dp"
                    android:text="@string/extra_1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="safetyTeamB"
                    android:paddingBottom="8dp"
                    android:text="@string/safety" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:onClick="resetScore"
            android:text="@string/reset_scores" />
    </RelativeLayout>
</ScrollView>